fix layout so footer stays at the bottom of page and does not overlap content

--- a/myfedora/static/css/myfedora-style.css
+++ b/myfedora/static/css/myfedora-style.css
@@ -143,8 +143,9 @@ a img
 
 .content
 {
-  margin-left: 0px;
+  margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 100px;
   color: #666666;
   background: #FFFFFF;
   display: inline-block;
@@ -267,7 +268,7 @@ a img
   font: normal 1.5ex/1.5 sans-serif;
   text-align: center;
   background: #FFFFFF url(http://fedoraproject.org/static/images/line-bottom.png) 0 0 repeat-x;
-  margin: 10px 0 0;
+  margin: -90px 0 0;
   border-bottom: 10px solid #337ACC;
   height: 80px;
   color: #AAAAAA;
@@ -275,6 +276,8 @@ a img
 
 #bottom
 {
+  margin-left: 18px;
+  margin-right: 18px;
 }
 
 #footer ul
